fix: wrap Image children with a styled div

--- a/components/Image/Image.css
+++ b/components/Image/Image.css
@@ -51,7 +51,8 @@
     z-index: 1;
   }
 
-  &__mask {
+  &__mask,
+  &__content {
     position: absolute;
     top: 0;
     left: 0;
